# hdl-experiments

./: .bazelrc  .git-vendor-config  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  flake.nix  vhdl_ls.toml  vhdl_ls.toml.add  vhdl_ls.toml.suffix
.github/workflows/: main.yml  release.yml
.hdl_checker/: cache.json
dff/tool_vivado/: BUILD.bazel
src/: README.md
src/bugs/: README.md
src/bugs/dff/: BUILD.bazel  README.md  top.sv
src/bugs/dff/tool.nvc/: BUILD.bazel
src/dff/: README.md
src/dff/tool.nvc/: BUILD.bazel
src/dff/tool.vivado/: BUILD.bazel
src/dff/tool_vivado/: BUILD.bazel
src/ex1/: BUILD.bazel  README.md  package.vhdl  test.vhdl
src/ex1/tool.nvc/: BUILD.bazel
src/ex2/: BUILD.bazel  README.md  ex2.vhdl  ex2_body.vhdl
src/ex3/: BUILD.bazel  README.md  ex3.vhdl
src/ex3/tool.nvc/: BUILD.bazel
src/ex4/: BUILD.bazel  README.md  ex4.vhdl
src/ex4/lib1/: BUILD.bazel  lib1.vhdl
src/genpkg/: BUILD.bazel  README.md  tb.vhdl  test.pkg.vhdl
src/genpkg/tool.nvc/: BUILD.bazel
src/genpkg/tool.vivado/: BUILD.bazel
src/inout/: BUILD.bazel  example.vhdl
src/inout/tool.nvc/: BUILD.bazel
src/inout/tool_nvc/: BUILD.bazel
src/nvc_examples/inout/: BUILD.bazel  README.md  mod.sv
src/nvc_examples/inout/tool.nvc/: BUILD.bazel
src/nvc_examples/inout/tool.verilator/: BUILD.bazel
src/nvc_verilog/: BUILD.bazel  counter.sv
src/nvc_verilog/counter/tool.nvc/: BUILD.bazel
src/nvc_verilog/counter/tool.verilator/: BUILD.bazel
src/nvc_verilog/tool.nvc/: BUILD.bazel
src/nvc_verilog/tool.verilator/: BUILD.bazel
src/nvc_verilog/uart/tool.nvc/: BUILD.bazel
src/twoproc/: BUILD.bazel  README.md  lib.vhdl
src/twoproc/tool.nvc/: BUILD.bazel
sv/: BUILD.bazel  dff.sv  dff.svh  top.sv
