load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

# bazel run //:gazelle
# gazelle:prefix github.com/filmil/a200t_examples
gazelle(name = "gazelle")

# bazel run //:buildifier
buildifier(
    name = "buildifier",
)

# bazel run //:gazelle-update-repos
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
