module(
    name = "hdl-experiments",
    version = "0.0.0",
)

bazel_dep(name = "bazel_rules_ghdl", version = "0.1.7")
bazel_dep(name = "bazel_rules_nvc", version = "0.5.2")
bazel_dep(name = "bazel_rules_vivado", version = "0.5.1", repo_name = "rules_vivado")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
bazel_dep(name = "fshlib", version = "0.1.6")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "gotopt2", version = "2.2.4")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_proto", version = "7.0.2")


bazel_dep(name = "rules_doxygen", version = "2.6.1", dev_dependency = True)
doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
use_repo(doxygen_extension, "doxygen")


bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0")
toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")
register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)
