load(
    "@rules_vivado//build/vivado:rules.bzl",
    "vivado_library",
)

package(default_visibility = ["//visibility:public"])

vivado_library(
    name = "dff",
    srcs = [
        "dff.sv",
    ],
    hdrs = [
        "dff.svh",
    ],
    deps = [
        "//third_party/xilinx:glbl",
    ]
)

vivado_library(
    name = "top",
    srcs = [
        "top.sv",
    ],
    deps = [
        ":dff",
    ],
)
