package(default_visibility = ["//visibility:public"])

filegroup(
    name = "ex1",
    srcs = [
        "test.vhdl",
    ],
    tags = [
        "vhdl_ls",
        "vhdl_ls_lib_ex1",
    ],
)

filegroup(
    name = "pkg",
    srcs = [
        "package.vhdl",
    ],
    tags = [
        "vhdl_ls",
        "vhdl_ls_lib_pkg",
    ],
)
