load(
    "@rules_nvc//build/nvc:rules.bzl",
    "vhdl_elaborate",
    "vhdl_library",
    "vhdl_run",
)

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = [
        "ex3.vhdl",
    ],
    tags = [
        "vhdl_ls",
        "vhdl_ls_lib_ex3",
    ],
)

vhdl_library(
    name = "ex3",
    srcs = [
        ":srcs",
    ],
)
