# BUILD rules for building the source code using vivado tooling.
load(
    "@rules_vivado//build/vivado:rules.bzl",
    "vivado_library",
)

package(default_visibility = ["//visibility:public"])

vivado_library(
    name = "dff",
    srcs = [
        "//src/dff:srcs",
    ],
    hdrs = [
        "//src/dff:hdrs",
    ],
    deps = [
        "//third_party/xilinx:glbl",
    ],
)

vivado_library(
    name = "top",
    srcs = [
        "//src/dff:top_srcs",
    ],
    deps = [
        ":dff",
    ],
)
