load(
    "@rules_nvc//build/nvc:rules.bzl",
    "vhdl_elaborate",
    "vhdl_library",
    "vhdl_run",
)

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = [
        "lib1.vhdl",
    ],
    tags = [
        "vhdl_ls",
        "vhdl_ls_lib_ex4_lib1",
    ],
)

vhdl_library(
    name = "ex4_lib1",
    srcs = [
        ":srcs",
    ],
)
