load(
    "@rules_nvc//build/nvc:rules.bzl",
    "produce_waveform",
    "vhdl_elaborate",
    "vhdl_library",
    "vhdl_run",
    "wave_view",
)

package(default_visibility = ["//visibility:public"])

vhdl_library(
    name = "inout_lib",
    srcs = [
        "//src/inout:srcs",
    ],
    entities = [
        "tb",
    ],
)

vhdl_elaborate(
    name = "tb",  # This should be the same as the entity name.
    library = ":inout_lib",
)

vhdl_run(
    name = "sim",
    args = [
        "--stop-time=10ns",
    ],
    entity = ":tb",
    deps = [
        ":inout_lib",
    ],
)

wave_view(
    name = "view",
    vhdl_run = ":sim",
)
